<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">SDMove</string>
<string name="aboutsumm">SDMove provides a convenient interface for finding applications that can be moved off of internal storage and onto external storage, which is, in most cases, your SD card.  Simply click on an application to be taken directly to a dialog that provides the interface for moving the application.</string>
<string name="autoextdesc">indicates that the app has been moved to external storage</string>
<string name="autointdesc">indicates that the app has not been moved to external storage, but can be</string>
<string name="intonlydesc">indicates that the developer has requested that the app be prevented from being moved to external storage</string>
<string name="prefextdesc">indicates that the app prefers being on external storage, and is there</string>
<string name="prefintdesc">indicates that the app prefers being on external storage, but is installed to internal storage anyway</string>
<string name="copyright">Copyright ©2010, Bitt Faulk</string>
<string name="aboutmenu">About</string>
<string name="sortmenu">Sort</string>
<string name="sortbyname">Sort by Name</string>
<string name="sortbystatus">Sort by Status</string>
<string name="abouttitle">About SDMove</string>
<string-array name="thanks">
	<item>Icon by &lt;a href=&quot;http://dryicons.com/&quot;&gt;DryIcons&lt;/a&gt;</item>
</string-array>
<string-array name="thanksdetail">
	<item>Thanks to iSec Partners for providing the source code to Manifest Explorer, which pointed me in the right direction in parsing the AndroidManifest file.</item>
	<item>Thanks to the guys at QuickSystemInfo for providing their source code, which showed me how to directly open the Application Info program.</item>
</string-array>
<string name="viewmenu">View</string>
<string name="viewlarge">Large Text</string>
<string name="viewmedium">Medium Text</string>
<string name="viewsmall">Small Text</string>
<string name="contextignore">Ignore</string>
<string name="contextlaunch">Launch</string>
<string name="clearignoremenu">Unignore</string>
<string name="clearignoremenu_long">Clear Ignored Packages</string>
<string name="refreshmenu">Refresh</string>
<string name="refreshmenu_long">Refresh Package Listing</string>
<string name="moveallmenu">Move All</string>
<string name="moveallmenu_long">Move All Packages</string>
<string name="noignoredpackages">All packages already visible</string>
</resources>
